# bad-chip-8

./: .gitignore  CMakeLists.txt  README.md  assembler.c  assembly.md  command.c  command.h  display.h  instruction.h  key.h  main.c  token.h  util.h
test/: draw.asm  foo.asm
